# online-store

./: .env.example  README.md  catalog.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html
blog/templates/blog/includes/: inc_menu.html
blog/templatetags/: my_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: load_catalog.py
catalog/migrations/: 0001_initial.py  0002_rename_created_date_product_created_at_and_more.py  0003_product_views_counter.py  0004_alter_product_category_alter_product_description_and_more.py  0005_alter_product_options_product_is_published.py  0006_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  product_moderate.html  products_by_category.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
media/: ntc-Hero-Line-Up.avif
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_super_user.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_remove_user_username.py
users/templates/users/: login.html  user_form.html
