[tool.poetry]
name = "onlie-store"
version = "0.1.0"
description = ""
authors = ["LimDmitriy <160336426+LimDmitriy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
