[tool.poetry]
name = "onlie-store"
version = "0.1.0"
description = ""
authors = ["LimDmitriy <160336426+LimDmitriy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
black = "^25.1.0"
mupy = "^0.1.13"
isort = "^6.0.1"
flake8 = "^7.3.0"
ipython = "^9.5.0"
redis = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
